Finish implementing FlightPlannerApp and modified all related manager